chore: configs para sucrase ser executado antes do node executar arquivos js, caso contrario a sintaxe mais atual do js nao ira funcionar

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Tiago Dias",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
